--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vuepress-theme-reco": "^1.6.6"
   },
   "dependencies": {
-    "markdown-it-katex": "^2.0.3"
+    "markdown-it-katex": "^2.0.3",
+    "vuepress-plugin-baidu-google-analytics": "^1.0.2",
+    "vuepress-plugin-flowchart": "^1.4.3"
   }
 }
